--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,12 +10,12 @@
     tools:context=".views.MapsActivity">
 
     <fragment
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mapView"
-        tools:context=".MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
-
+        tools:context=".views.MapsActivity"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,55 +26,64 @@
         android:elevation="10dp"
         android:orientation="horizontal"
         android:background="@drawable/white_border"
-        android:id="@+id/relLayout1">
+        android:id="@+id/linearLayout1">
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/ic_magnify"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_gravity="center_horizontal|center_vertical"
             android:src="@drawable/ic_magnify"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginStart="@dimen/margin_10" />
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginStart="@dimen/margin_16"
+            app:tint="@color/greyDark" />-->
 
-       <EditText
+        <fragment
+            android:id="@+id/autocomplete_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/ic_magnify"
-           android:layout_gravity="center_horizontal|center_vertical"
-             android:textAlignment="center"
-            android:textSize="18sp"
-            android:textColor="#000"
+            android:layout_height="match_parent"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
+        <!--<EditText
             android:id="@+id/input_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColorHint="@color/greyLight"
+            android:textColor="@color/black"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:textSize="18sp"
             android:background="@null"
-            android:hint="Enter Address, City or Zip Code"
-            android:imeOptions="actionSearch"/>
-
+            android:hint="@string/editcomment_search_location"
+            android:imeOptions="actionSearch"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10" />-->
 
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/relLayout1"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="13dp"
-        android:layout_marginTop="23dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/ic_gps"
-        android:src="@drawable/ic_gps"
-        android:layout_marginEnd="10dp"
-        android:layout_alignParentEnd="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_save_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/relLayout1"
+        android:layout_below="@id/linearLayout1"
+        app:backgroundTint="@color/purple_200"
+        app:tint="@color/white"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="18dp"
         android:src="@drawable/ic_baseline_add_24" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_gps"
+        app:backgroundTint="@color/purple_200"
+        app:tint="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_save_location"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="@dimen/size_20"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_gps" />
 
 </RelativeLayout>
