--- a/app/src/main/res/layout/fragment_place_add.xml
+++ b/app/src/main/res/layout/fragment_place_add.xml
@@ -147,20 +147,21 @@
             android:layout_marginEnd="24dp"
             android:text="Selección imágenes"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_img_counter" />
 
         <Button
             android:id="@+id/btn_map"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:text="Agregar localización"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_images" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_clear_images" />
 
         <ImageButton
             android:id="@+id/imgb_upload"
@@ -193,6 +194,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgb_upload" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_img_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="Imagen contador"
+            android:textSize="@dimen/margin_16"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_tags" />
+
+        <Button
+            android:id="@+id/btn_clear_images"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:text="Borrar imágenes"
+            android:enabled="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_images" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
