--- a/app/src/main/res/layout/fragment_place_data.xml
+++ b/app/src/main/res/layout/fragment_place_data.xml
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
-        android:text="Button"
+        android:text="Ver localización"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
