--- a/app/src/main/res/layout/tags_item_list.xml
+++ b/app/src/main/res/layout/tags_item_list.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
     <RadioButton
         android:id="@+id/radioButton"
         android:layout_width="wrap_content"
@@ -14,9 +22,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Tag option"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Tag option" />
+
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
