--- a/app/src/main/res/menu/placelist_menu.xml
+++ b/app/src/main/res/menu/placelist_menu.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="none">
 
         <item
+            android:id="@+id/opt_search_place"
+            android:icon="@drawable/ic_baseline_search_24"
+            android:title="@string/opt_search_place"
+            app:showAsAction="always"
+            app:actionViewClass="android.widget.SearchView" />
+
+        <item
             android:id="@+id/opt_add_place"
-            android:title="@string/opt_add_place" />
+            android:title="@string/opt_add_place"
+            android:visible="true"/>
 
     </group>
 
